[gd_scene load_steps=3 format=3 uid="uid://bpigfnimf8bix"]

[ext_resource type="Script" path="res://SelectedTooth.gd" id="1_53775"]
[ext_resource type="Script" path="res://Pre-extraction-continue.gd" id="2_28mtk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JawSelection" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 652.0
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="JawSelection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Quadrant" type="RichTextLabel" parent="JawSelection/VBoxContainer"]
layout_mode = 2
text = "Quadrant"
fit_content = true

[node name="QuadrantList" type="ItemList" parent="JawSelection/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
auto_height = true
item_count = 4
max_columns = 2
fixed_column_width = 400
item_0/text = "Quadrant 1"
item_1/text = "Quadrant 2"
item_2/text = "Quadrant 3"
item_3/text = "Quadrant 4"

[node name="Tooth" type="RichTextLabel" parent="JawSelection/VBoxContainer"]
layout_mode = 2
text = "Tooth"
fit_content = true

[node name="ToothList" type="ItemList" parent="JawSelection/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
auto_height = true
item_count = 8
max_columns = 2
fixed_column_width = 400
item_0/text = "1"
item_1/text = "2"
item_2/text = "3"
item_3/text = "4"
item_4/text = "5"
item_5/text = "6"
item_6/text = "7"
item_7/text = "8"

[node name="Type" type="RichTextLabel" parent="JawSelection/VBoxContainer"]
layout_mode = 2
text = "Tooth"
fit_content = true

[node name="TypeList" type="ItemList" parent="JawSelection/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
auto_height = true
item_count = 2
max_columns = 2
fixed_column_width = 400
item_0/text = "Plastic"
item_1/text = "Human"

[node name="SelectedTooth" type="RichTextLabel" parent="JawSelection/VBoxContainer" node_paths=PackedStringArray("typeList")]
layout_mode = 2
text = "Selected tooth:"
fit_content = true
script = ExtResource("1_53775")
typeList = NodePath("../TypeList")

[node name="Continue" type="Button" parent="JawSelection/VBoxContainer"]
layout_mode = 2
text = "Continue"
script = ExtResource("2_28mtk")

[connection signal="item_selected" from="JawSelection/VBoxContainer/QuadrantList" to="JawSelection/VBoxContainer/SelectedTooth" method="quadrantChanged"]
[connection signal="item_selected" from="JawSelection/VBoxContainer/ToothList" to="JawSelection/VBoxContainer/SelectedTooth" method="toothChanged"]
[connection signal="item_selected" from="JawSelection/VBoxContainer/TypeList" to="JawSelection/VBoxContainer/SelectedTooth" method="typeChanged"]
